basic name sticker

--- a/client/src/styles/partials/_resets.scss
+++ b/client/src/styles/partials/_resets.scss
@@ -60,7 +60,7 @@ video {
   border: 0;
   font-size: 62.5%;
   font: inherit;
-  font-family: Georgia, Arial, Verdana, Calibri, sans-serif;
+  // font-family: Georgia, Arial, Verdana, Calibri, sans-serif;
   vertical-align: baseline;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
