added some code, not sure what

--- a/client/src/styles/partials/_typography.scss
+++ b/client/src/styles/partials/_typography.scss
@@ -1,3 +1,9 @@
+@use "./font-face" as *;
+@use "./variables" as *;
 * {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: $font-stack;
+}
+
+h1 {
+  font-family: $font-brand;
 }
