--- a/client/src/styles/partials/_typography.scss
+++ b/client/src/styles/partials/_typography.scss
@@ -4,6 +4,8 @@
   font-family: $font-stack;
 }
 
-h1 {
+.header__brand-words {
   font-family: $font-brand;
+  font-weight: 800;
+  text-decoration: none;
 }
