weights connected to dB

--- a/client/src/components/WeightLog/WeightLog.scss
+++ b/client/src/components/WeightLog/WeightLog.scss
@@ -6,6 +6,7 @@
   }
 
   &__input-date {
+    display: none;
     margin: 1rem 0;
     label {
       width: 6rem;
@@ -24,6 +25,7 @@
     }
   }
   &__input-age {
+    display: none;
     margin: 1rem 0;
     label {
       width: 6rem;
