--- a/client/src/components/WeightLog/WeightLog.scss
+++ b/client/src/components/WeightLog/WeightLog.scss
@@ -1,7 +1,7 @@
 .weights {
   &__input-graph {
     margin: 2rem;
-    justify-content: space-evenly;
+    justify-content: space-around;
     display: flex;
   }
 
