--- a/client/src/components/UserLoginPage/UserLoginPage.scss
+++ b/client/src/components/UserLoginPage/UserLoginPage.scss
@@ -1,4 +1,11 @@
+.user-login {
+  &__button {
+    margin-left: 10rem;
+  }
+}
+
 .form-group {
+  margin-left: 10rem;
   label {
     width: 10rem;
     margin: 0.5rem;
